<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Light_pink"
    tools:context=".Pandemic">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:backgroundTint="@color/Light_pink"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Light_pink"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/Light_pink"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Pandemic">

            <ImageView
                android:layout_width="220dp"
                android:layout_height="180dp"
                android:layout_gravity="center|end"
                android:layout_marginBottom="15dp"
                android:src="@drawable/pandemi"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        android:padding="20dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="Due to the rising concern, the first type of emergency we are including is a pandemic. A pandemic is any disease or condition that affects people in many countries at the same time.
A pandemic is a disease outbreak that spans several countries and affects a large number of people. Pandemics are most often caused by viruses, like Coronavirus Disease 2019 (COVID-19), which can easily spread from person to person.
A new virus, like COVID-19, can emerge from anywhere and quickly spread around the world. It is hard to predict when or where the next new pandemic will emerge."
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="What you can do now"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="Gather the following supplies and have a quantity of at least 1 month’s worth on hand like food, medicine, vitamins and water."
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="The following are guidelines to help prepare pandemic :"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="•	Have emergency supplies and staples on hand include masks."
                android:justificationMode="inter_word"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="•	Keep cash on hand." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="•	Keep gas in your car." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="•	Consider “social distancing” (staying away from crowded areas, theaters, etc.)." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="•	Develop a work at home strategy if possible." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:text="A severe pandemic would result in high rates of illness and people would not be able to go to work. This would affect the economy and almost every aspect of day-to-day life. Daily life would become especially difficult when people who provide needed services like power, transportation and communications, could not come to work." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="Reference"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_refP1"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:text="@string/_1_pandemic"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_refP2"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:text="@string/_2_pandemic"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_refP3"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:text="@string/_3_pandemic"
                android:textColor="@color/black"
                android:textSize="16sp" />




        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>