<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Light_purple"
    tools:context=".Violence">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:backgroundTint="@color/Light_purple"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Light_purple"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/Light_purple"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Violence">

            <ImageView
                android:layout_width="220dp"
                android:layout_height="180dp"
                android:layout_gravity="center|end"
                android:layout_marginBottom="15dp"
                android:src="@drawable/bully"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        android:padding="20dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="Violence is an act of physical force that causes or is intended to cause harm. The damage inflicted by violence may be physical, psychological, or both. Violence may be distinguished from aggression, a more general type of hostile behaviour that may be physical, verbal, or passive in nature."
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="Violence can be categorized in a number of ways. Violent crimes are typically divided into four main categories, based on the nature of the behaviour: homicide (the killing of one human being by another, sometimes for legally justifiable reasons), assault (physically attacking another person with the intent to cause harm), robbery (forcibly taking something from another person), and rape (forcible sexual intercourse with another person). Other forms of violence overlap with these categories, such as child sexual abuse (engaging in sexual acts with a child) and domestic violence (violent behaviour between relatives, usually spouses)."
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="What you can do now, if you meet violent person"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:text="•	Try to maintain a calm demeanor. Survey your surroundings for escape routes." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:text="•	Avoid challenging or debating with the person." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:text="•	Avoid confrontation with the violent person unless you feel your life or the lives of others are in danger. If you feel there is immediate danger, you'll have to decide what is best to do." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="What you can do now, if you witness violent behavior"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="•	Report any violent incidents." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="•	Seek medical attention as required.." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="•	Provide as much information." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="Prevention of violence"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text=" Many such programs are school-based, although some involve the family or the community. The most-successful violence-prevention programs are those that target all children, not just those who are considered to be at risk for violence. In addition, the most success has been found in school-based programs with committed and involved teachers and programs that include parent training.
A variety of programs have been developed to reduce or prevent violence in individuals who have already shown a tendency toward violence. For example, a number of prison-based programs attempt to reduce the likelihood of reoffending among violent and nonviolent criminals. Such programs often involve a variety of components. Violent offenders may receive training to improve parenting and other relationship skills. "
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="Reference"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_refV1"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:text="@string/_1_pandemic"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_refV2"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:text="@string/_2_pandemic"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_refV3"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:text="@string/_3_pandemic"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>