<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Light_green"
    tools:context=".Disaster">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:backgroundTint="@color/Light_green"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Light_green"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/Light_green"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Disaster">

            <ImageView
                android:layout_width="220dp"
                android:layout_height="180dp"
                android:layout_gravity="center|end"
                android:layout_marginBottom="15dp"
                android:src="@drawable/disaster"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        android:padding="20dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="Disasters are serious disruptions to the functioning of a community that exceed its capacity to cope using its own resources. Disasters can be caused by natural, man-made and technological hazards, as well as various factors that influence the exposure and vulnerability of a community. These types of disaster
include tornadoes, hurricane, floods, wildfire, earthquake and drought. In the event of a natural disaster, having a preparedness plan can be a critical element in helping secure a safe transition out of danger for you, your loved ones and your property. Preparation is key, but it is also important to stay calm and focused during an emergency. If you are ordered to evacuate, do so. If you are not evacuating, use your time wisely to make preparations."
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="The following are guidelines to help prepare disaster :"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="•	Know the warning signs and alert signals for your area" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="•	Check your emergency survival kit." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:text="•	Be sure you have car chargers for your cell phone, smart phone and other portable devices. Having car chargers available can assist you in staying in communication with others if your electricity goes out." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="The following are guidelines to help after earthquake :"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:text="•	Return home only when authorities indicate it is safe. " />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:text="•	Secure your home. If you have time, bring in outdoor
furniture. Move essential items to an upper floor.
" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:text="•	Open cabinets cautiously. Beware of objects that can fall off
shelves." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:text="•	Be aware of possible tsunamis if you live in coastal areas." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:text="•	Stay away from damaged areas unless your assistance has
been specifically requested by police, fire, or relief
organizations." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="The following are guidelines to help after wildfire :"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:text="•	Be prepared to extinguish fire quickly and completely." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:text="•	Never leave a fire—even a burning cigarette—unattended. " />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:text="•	Encourage the development of a family wildfire evacuation
plan if the area in your community is at risk for wildfire" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="Reference"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_refD1"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:text="@string/_1_disaster"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_refD2"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:text="@string/_2_disaster"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_refD3"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:text="@string/_3_disaster"
                android:textColor="@color/black"
                android:textSize="16sp" />



        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>